fix navbar visibility for ipad pro

--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -55,7 +55,7 @@
 	border-bottom: 3px solid #FF6666;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1025px) {
 	.navbar__menubtn {
 		display: none;
 	}
